--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.6.2",
     "shadcn": "^3.0.0",
+    "supabase": "^2.39.2",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.8.3",
